# xaibo

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  docs.yml
docs/: README.md  api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  core-concepts.md  deployment.md  examples.md  features.md  getting-started.md  index.md  project-structure.md  tools-and-integrations.md  troubleshooting.md
docs/api/: events.md  modules.md  protocols.md  server.md
docs/explanation/: index.md
docs/explanation/architecture/: dependency-injection.md  protocols.md  transparent-proxies.md
docs/explanation/concepts/: event-system.md  exchange-system.md  modules-vs-protocols.md  react-pattern.md
docs/explanation/design/: extensibility.md  modularity.md  testability.md
docs/how-to/: index.md  installation.md
docs/how-to/contribute/: contributing.md
docs/how-to/deployment/: mcp-server.md  openai-api.md
docs/reference/: agent-config.md  cli.md  index.md  troubleshooting.md
docs/tutorial/: advanced-orchestration.md  building-tools.md  getting-started.md  index.md  understanding-protocols.md
examples/google_calendar_example/: pyproject.toml
examples/livekit_example/: .env  pyproject.toml
src/xaibo/: __init__.py
tests/: test_agent_event_listeners.py  test_auto_config.py  test_code_first_agent_config.py  test_instantiation.py  test_proxy_event_listeners.py  test_reading.py
tests/agents/: test_stressing_tool_user.py
tests/core/: test_agent_event_listeners.py  test_auto_config.py  test_instantiation.py  test_openai_webserver.py  test_proxy_event_listeners.py  test_reading.py
tests/integrations/: test_anthropic.py  test_google.py  test_openai.py
tests/memory/: test_huggingface_embedder.py  test_numpy_vector_index.py  test_sentence_transformer_embedder.py  test_token_chunker.py
tests/tools/: test_python_tools.py  test_tool_call_adapter.py
tests/webserver/: test_mcp_webserver.py  test_openai_webserver.py
ui/: package.json  pnpm-lock.yaml  schema.graphql  svelte.config.js  vite.config.ts
xaibo/: __init__.py
xaibo-examples/echo/: __init__.py
xaibo/core/: __init__.py  agent.py  config.py  exchange.py  registry.py  xaibo.py
xaibo/server/: web.py
xaibo_examples/echo/: __init__.py
(+85 files in other folders)
