[project]
name = "xaibo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docstring-parser>=0.16",
    "pydantic>=2.10.6",
    "pydantic-yaml>=1.4.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
webserver = [
    "fastapi[standard]>=0.115.12",
    "watchfiles>=1.0.4",
]
openai = [
    "openai>=1.65.4",
]
anthropic = [
    "anthropic>=0.49.0",
]
google = [
    "google-genai>=1.5.0",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
]
