[project]
name = "xaibo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docstring-parser>=0.16",
    "numpy>=2.2.5",
    "pydantic>=2.10.6",
    "pydantic-yaml>=1.4.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "sentence-transformers>=4.1.0",
    "soundfile>=0.13.1",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
webserver = [
    "fastapi[standard]>=0.115.12",
    "strawberry-graphql>=0.262.5",
    "strawberry-graphql[cli]>=0.262.5",
    "watchfiles>=1.0.4",
]
openai = [
    "openai>=1.65.4",
]
anthropic = [
    "anthropic>=0.49.0",
]
google = [
    "google-genai>=1.5.0",
]
bedrock = [
    "boto3>=1.37.38",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "devtools>=0.12.2",
]
